--- a/src/components/pages/Dashboard/Welcome/Welcome.module.scss
+++ b/src/components/pages/Dashboard/Welcome/Welcome.module.scss
@@ -30,7 +30,7 @@
     width: 49%;
     background: rgba(245, 245, 245, 0.15);
     border: 0.5px solid rgba(51, 51, 51, 0.1);
-    height: 50vh;
+    height: auto;
     border-radius: 0.75em;
 }
 
@@ -97,13 +97,14 @@
     margin-top: 2.5em;
     display: flex;
     justify-content: space-between;
+    padding: .5em;
 }
 
 .bottom_left{
     width: 48.6%;
     background: rgba(245, 245, 245, 0.15);
     border: 0.5px solid rgba(51, 51, 51, 0.1);
-    height: 50vh;
+    height: auto;
     border-radius: 0.75em;
 }
 
@@ -111,7 +112,7 @@
     width: 48.6%;
     background: rgba(245, 245, 245, 0.15);
     border: 0.5px solid rgba(51, 51, 51, 0.1);
-    height: 50vh;
+    height: auto;
     border-radius: 0.75em;
 }
 
@@ -136,4 +137,142 @@
     width: 32px;
     border-radius: 100px;
     border: 2px solid var(--purple)
+}
+
+.news{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1%;
+}
+
+.blog{
+    display: flex;
+    // width: 32%;
+    background: rgba(245, 245, 245, 0.2);
+    border: 0.5px solid rgba(51, 51, 51, 0.1);
+    margin-bottom: 1%;
+    border-radius: 0.85em;
+}
+
+.blog_thumbnail{
+    width: 20%;
+    border-top-left-radius: 0.85em;
+    border-bottom-left-radius: 0.85em;
+
+}
+
+.blog_description{
+    font-family: 'Space Grotesk', sans-serif;
+    font-weight:100;
+}
+
+.blog_title{
+    font-family: "Integral CF Demi Bold";
+}
+.blog_info{
+    padding: .5em;
+}
+
+
+.leaderboard{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.medal{
+    width: 3.25em;
+    margin-right: 1em;
+    display: flex;
+
+}
+
+.user_wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.user{
+    width: 100%;
+    background: rgba(245, 245, 245, 0.2);
+    border-bottom: 0.5px solid rgba(51, 51, 51, 0.1);
+    margin-bottom: 1%;
+    padding: .5em;
+    display: flex;
+
+    &:last-child{
+        border-bottom: 0px;
+    }
+}
+
+.user_avatar{
+    width: 2.75em;
+    height: 2.75em;
+    border-radius: 99px;
+    border: 3px solid var(--purple);
+    margin-right: .5em;
+}
+
+.user_name{
+    font-family: "Integral CF Demi Bold";
+    font-size: 1.1em
+}
+.user_points{
+    font-style: italic;
+    font-size: .95em;
+    color: rgb(133, 133, 133);
+}
+
+.your_quizzes{
+    display: flex;
+    flex-direction: column;
+}
+
+.your_quiz{
+    width: 100%;
+    background: rgba(245, 245, 245, 0.2);
+    border-bottom: 0.5px solid rgba(51, 51, 51, 0.1);
+    margin-bottom: 1%;
+    padding: .5em;
+    display: flex;
+    justify-content: space-between;
+
+    &:last-child{
+        border-bottom: 0px;
+    }
+}
+
+.your_quiz_thumb{
+    width: 40%;
+}
+
+.your_quiz_wrapper{
+    width: 70%;
+    display: flex;
+}
+
+.edit{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-right: .75em;
+}
+
+.edit_icon{
+    width: 2.6em;
+    margin-left: .7em;
+    padding: .5em;
+    background: rgba(147, 109, 254, 0.1);
+    border-radius: 2em;
+    border: .5px solid transparent;
+    transition: all ease-in-out .3s;
+    cursor: pointer;
+
+
+    &:hover{
+        background: rgba(147, 109, 254, 0.2);
+        border: .5px solid var(--purple);
+    }
 }
