--- a/src/components/pages/Form/shared/LoginRegister.scss
+++ b/src/components/pages/Form/shared/LoginRegister.scss
@@ -77,4 +77,9 @@
   &:focus {
     outline: none;
   }
+  &:hover {
+    cursor: pointer;
+    background-color: #936dfe;
+    transition: 0.4s ease;
+  }
 }
