--- a/src/components/shared/Website/FormGeneral.scss
+++ b/src/components/shared/Website/FormGeneral.scss
@@ -46,8 +46,8 @@ body {
   margin: 0;
   padding: 0;
   height: 20hv;
-  margin: -20px 0 50px;
-  margin-top: 50px;
+  // margin: -20px 0 50px;
+  // margin-top: 50px;
 }
 
 form {
