Add and Render errors from Backend

--- a/src/components/pages/Form/shared/LoginRegister.scss
+++ b/src/components/pages/Form/shared/LoginRegister.scss
@@ -50,11 +50,22 @@
   }
 }
 
+.BackError {
+  background: none;
+  border: 1.5px solid red;
+  border-radius: 15px;
+  font-size: 10pt;
+  font-family: Poppins;
+  width: 100%;
+  text-align: center;
+  margin-right: 115px;
+}
+
 .error {
   margin: -5px;
-  font-family: Poppiins;
+  font-family: Poppins;
   color: red;
-  font-size: 12pt;
+  font-size: 10pt;
   width: 280px;
   text-align: left;
 }
@@ -82,4 +93,8 @@
     background-color: #936dfe;
     transition: 0.4s ease;
   }
+}
+
+@media only screen and (max-width: 700px) {
+  
 }
