--- a/src/components/pages/Form/Form.scss
+++ b/src/components/pages/Form/Form.scss
@@ -12,7 +12,7 @@
   position: absolute;
   overflow: hidden;
   width: 768px;
-  height: 78.5%;
+  height: 86%;
   max-width: 100%;
   min-height: 480px;
   padding: 0;
@@ -118,5 +118,12 @@
   }
   .overlay_right {
     transform: translateX(20%);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
