--- a/src/components/pages/Form/Form.scss
+++ b/src/components/pages/Form/Form.scss
@@ -80,10 +80,10 @@
   transform: translateX(0);
 }
 
-.logo {
-  margin-top: -70px;
-  margin-bottom: -45px;
-  width: "200px";
+.FormLogo {
+  margin-top: -60px;
+  margin-bottom: -50px;
+  width: 250px;
   cursor: pointer;
 }
 
