--- a/src/components/shared/Footer/Footer.module.scss
+++ b/src/components/shared/Footer/Footer.module.scss
@@ -141,6 +141,7 @@
 
 .newsletter_input{
     width: 100%;
+    font-family: "Space Grotesk", sans-serif;
     font-size: 1.15em;
     padding: .65em .75em;
     border-radius: 1em;
