--- a/src/components/pages/Form/Form.scss
+++ b/src/components/pages/Form/Form.scss
@@ -3,11 +3,12 @@
   height: 100%;
   display: flex;
   justify-content: center;
+  font-family: "Space Grotesk", sans-serif;
 }
 
 .container {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 3em;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: absolute;
   overflow: hidden;
@@ -31,22 +32,22 @@
 }
 
 .overlay {
-  background: #ff416c;
-  background: -webkit-linear-gradient(
-    to right,
-    rgb(2, 173, 116),
-    rgb(5, 43, 27)
-  );
-  background: linear-gradient(
-    22.88deg,
-    #5928e5 -2%,
-    rgba(43, 19, 111, 0.95361) 43.53%,
-    rgba(27, 12, 69, 0.937264) 75.97%,
-    rgba(6, 3, 15, 0.91) 98.63%
-  );
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 0;
+  // background: #ff416c;
+  // background: -webkit-linear-gradient(
+  //   to right,
+  //   rgb(2, 173, 116),
+  //   rgb(5, 43, 27)
+  // );
+  // background: linear-gradient(
+  //   22.88deg,
+  //   #5928e5 -2%,
+  //   rgba(43, 19, 111, 0.95361) 43.53%,
+  //   rgba(27, 12, 69, 0.937264) 75.97%,
+  //   rgba(6, 3, 15, 0.91) 98.63%
+  // );
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: 0 0;
   color: #ffffff;
   position: relative;
   left: -100%;
@@ -54,6 +55,7 @@
   width: 200%;
   transform: translateX(0);
   transition: transform 0.6s ease-in-out;
+  background-color: #5928E5 !important;
 }
 
 .overlay_panel {
