Added Contact Validation and implemented EmailJs

--- a/src/components/pages/Contact/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm.scss
@@ -93,3 +93,13 @@
   margin-left: 26rem;
   margin-bottom: 2rem;
 }
+
+.errorContact {
+  color: rgb(189, 51, 51);
+  margin: -5px 265px -3px 0;
+  font-size: 10pt;
+  padding: 0.2em;
+  width: 280px;
+  text-align: left;
+  font-family: "Space Grotesk", sans-serif;
+}
