--- a/src/components/pages/Home/Hero/Hero.module.scss
+++ b/src/components/pages/Home/Hero/Hero.module.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     padding: 1em 3em;
     background: var(--purple);
+    display: flex;
 
     @media screen and (max-width: 900px) {
         padding: 10% 0;
@@ -30,7 +31,7 @@
     width: 50%;
     display: flex;
     align-items: flex-end;
-    position: absolute;
+    // position: absolute;
     bottom: 0;
     right: 0;
 
