--- a/src/components/shared/Dashbar/Dashbar.module.scss
+++ b/src/components/shared/Dashbar/Dashbar.module.scss
@@ -23,6 +23,19 @@
     }
 }
 
+.container_mobile{
+    display: block;
+    height: 100vh;
+    width: 17.5%;
+    background: var(--purple);
+    display: flex;
+    flex-direction: column;
+    padding: .75em .5em;
+    box-shadow: 4px 4px 4px #00000010;
+    position: fixed;
+    left: 0;
+}
+
 .top{
     @media screen and (max-width: 900px) {
         display: none;
@@ -37,16 +50,15 @@
     }
 }
 
-.bottom{
-
-}
-
 .icon_holder_active{
     padding: .5em .65em;
     background: #fff;
     border-radius: 1em;
     margin-bottom: 2em;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    color: var(--purple);
 
     @media screen and (max-width: 900px) {
         margin-bottom: 0em;
@@ -66,6 +78,7 @@
     margin-bottom: 1.5em;
     cursor: pointer;
     transition: all ease-in-out .4s;
+    display: flex;
 
     @media screen and (max-width: 900px) {
         margin-bottom: 0em;
@@ -91,4 +104,19 @@
 .logo {
     height: 2.65em;
     fill: #fff;
+}
+
+.testing{
+    background-color: brown;
+    padding: .5em;
+    font-size: 1.25em;
+    position: absolute;
+    top: 1em; right: 1em;
+}
+
+.icon_menu_text{
+    font-size: 1.25em;
+    font-family: "Integral CF Demi Bold";
+    margin-left: 1em;
+
 }
