--- a/src/components/pages/Contact/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm.scss
@@ -15,6 +15,8 @@
   justify-content: center;
   color: white;
   margin: -25px 0 32px 0;
+  @media screen and (max-width: 900px) {
+  }
 }
 
 #topTitle {
@@ -28,6 +30,9 @@
   justify-content: center;
   padding: 7rem 6.8rem 0 0;
   font-family: "Poppins";
+  @media screen and (max-width: 900px) {
+    text-align: center;
+  }
 }
 #third {
   display: flex;
@@ -69,6 +74,9 @@
     background-color: #f5f5f515;
     border: 0.5px solid #5928e550;
   }
+  @media screen and (max-width: 900px) {
+    width: 80%;
+  }
 }
 
 .mainContainer form {
@@ -86,12 +94,21 @@
   display: flex;
   justify-content: center;
   background: none;
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 #contactSubmit {
   width: 150px;
   margin-left: 26rem;
   margin-bottom: 2rem;
+  @media screen and (max-width: 900px) {
+    margin: 0 auto;
+    margin: 5px 0 20px 0;
+  }
 }
 
 .errorContact {
