--- a/src/components/pages/Home/Hero/Hero.module.scss
+++ b/src/components/pages/Home/Hero/Hero.module.scss
@@ -9,15 +9,17 @@
         padding: 10% 0;
         height: auto;
         flex-direction: column;
-      }
+    }
 }
 
 .left{
-    height: 100vh;
+    height: 92vh;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
 
     @media screen and (max-width: 900px) {
         width: 100%;
@@ -27,13 +29,14 @@
 }
 
 .right{
-    height: 100vh;
+    height: 90vh;
     width: 50%;
     display: flex;
     align-items: flex-end;
-    // position: absolute;
+    position: absolute;
     bottom: 0;
     right: 0;
+    overflow-x: hidden;
 
     @media screen and (max-width: 900px) {
         display: none;
