--- a/src/components/shared/Footer/Footer.module.scss
+++ b/src/components/shared/Footer/Footer.module.scss
@@ -1,12 +1,12 @@
-.container{
+.container {
     width: 100%;
-    background: #5928E5;
+    background: #5928e5;
     padding: 0em 3em;
     display: flex;
     flex-direction: column;
 }
 
-.top{
+.top {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -18,15 +18,15 @@
     }
 }
 
-.bottom{
+.bottom {
     display: flex;
     border-top: 1px solid #ffffff10;
     justify-content: center;
-    padding: .5em 0em;
+    padding: 0.5em 0em;
     align-items: center;
 }
 
-.left{
+.left {
     width: 33.33%;
 
     @media screen and (max-width: 900px) {
@@ -40,8 +40,7 @@
     }
 }
 
-
-.center{
+.center {
     width: 33.33%;
     display: flex;
     flex-direction: column;
@@ -56,7 +55,7 @@
     }
 }
 
-.right{
+.right {
     width: 33.33%;
     display: flex;
     flex-direction: column;
@@ -72,44 +71,32 @@
     }
 }
 
-.link{
-    font-size: 1.2em;
-    color: #fff;
-    margin-bottom: .45em;
-    transition: all ease-in-out .5s;
-}
-
-.link:hover{
-    letter-spacing: 1px;
-}
-
-.smm_icon{
+.smm_icon {
     fill: #fff;
     height: 2.25em;
-    padding: .25em;
+    padding: 0.25em;
     border-radius: 100px;
     cursor: pointer;
-    transition: all ease-in-out .3s;
-    margin-right: .85em;
+    transition: all ease-in-out 0.3s;
+    margin-right: 0.85em;
 }
 
-.smm_icon:hover{
+.smm_icon:hover {
     background: #ffffff40;
 }
 
-
-.links{
+.links {
     font-family: "Integral CF Demi";
     font-size: 1.5em;
     color: #fff;
-    margin-bottom: .8em;
+    margin-bottom: 0.8em;
 
     @media screen and (max-width: 900px) {
         text-align: center;
     }
 }
 
-.copyright{
+.copyright {
     font-family: "Integral CF Demi Bold";
     font-size: 1.25;
     display: flex;
@@ -119,40 +106,53 @@
     color: #ffffff;
 }
 
-.description{
+.description {
     font-size: 1.25em;
     color: #ffffff;
-    letter-spacing: .1px;
+    letter-spacing: 0.1px;
     margin: 1em 0em;
 }
 
-.newsletter_title{
+.newsletter_title {
     font-family: "Integral CF Demi Bold";
     font-size: 1.5em;
     color: #fff;
-    margin-bottom: .8em;
+    margin-bottom: 0.8em;
 }
-.contact_title{
+.contact_title {
     font-family: "Integral CF Demi Bold";
     font-size: 1.5em;
     color: #fff;
-    margin-bottom: .8em;
+    margin-bottom: 0.8em;
 }
 
-.newsletter_input{
+.newsletter_input {
     width: 100%;
     font-family: "Space Grotesk", sans-serif;
     font-size: 1.15em;
-    padding: .65em .75em;
+    padding: 0.65em 0.75em;
     border-radius: 1em;
-    border: 0;
-    margin-right: .25em;
+    border: 0.5px solid white;
+    margin-right: 0.25em;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+
+    &:active {
+        border: 0.5px solid rgba(125, 99, 196, 0.314);
+    }
+
+    &:hover {
+        background: #f1f1f1;
+    }
 }
 
-.cta_wrapper{
+.cta_wrapper {
+    width: auto;
     display: flex;
-    margin-bottom: 1em;
-    transition: all ease-in-out .5s;
+    margin-bottom: .5em;
+    transition: all ease-in-out 0.5s;
+    padding: 0.4em 0.5em;
+    border-radius: 100px;
 
     @media screen and (max-width: 900px) {
         width: 100%;
@@ -161,34 +161,32 @@
         text-align: center;
         justify-content: center;
 
-        &:last-child{
+        &:last-child {
             margin-bottom: 1em;
         }
-
     }
 }
 
-.cta_wrapper:hover{
-    opacity: .75;
+.cta_wrapper:hover {
+    background: #ffffff40;
 }
 
-.cta_svg{
+.cta_svg {
     fill: #fff;
     height: 1.65em;
     margin-right: 1em;
 }
 
-.cta_name{
+.cta_name {
     font-size: 1.15em;
     color: #fff;
     font-weight: 400;
-
 }
-.logo{
+.logo {
     height: 3em !important;
 }
 
-.links_flex{
+.links_flex {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -199,4 +197,28 @@
         justify-content: center;
         align-items: center;
     }
+}
+
+.testing {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.link {
+    width: 100%;
+    padding: 0.3em 1em;
+    margin-bottom: 0.1234em;
+    font-size: 1.2em;
+    color: #fff;
+    text-align: start;
+    border-radius: 100px;
+    width: 100%;
+    margin-right: 3.34em;
+    transition: all ease-in-out 0.5s;
+}
+
+.link:hover {
+    background: #ffffff40;
 }
