--- a/src/components/pages/Contact/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm.scss
@@ -77,6 +77,9 @@
   @media screen and (max-width: 900px) {
     width: 80%;
   }
+  @media screen and (max-width: 1100px) {
+    width: 80%;
+  }
 }
 
 .mainContainer form {
@@ -119,4 +122,12 @@
   width: 280px;
   text-align: left;
   font-family: "Space Grotesk", sans-serif;
+  @media screen and (max-width: 900px) {
+    width: 80%;
+    margin: 0 auto;
+  }
+  @media screen and (max-width: 1100px) {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
