--- a/src/components/pages/Dashboard/AddQuiz copy/AddQuiz.module.scss
+++ b/src/components/pages/Dashboard/AddQuiz copy/AddQuiz.module.scss
@@ -11,25 +11,10 @@
     width: 25%;
     height: 100vh;
     margin-left: -0.1em;
-    overflow-y: scroll;
-    border-right: 0.25px solid rgba(141, 141, 141, 0.085);
-}
-
-.quiz_list{
     padding: 1em;
+    overflow-y: scroll;
+    border-right: 0.25px solid rgba(141, 141, 141, 0.020);
 }
-
-.miniheader {
-    width: 100%;
-    height: 7.5vh;
-    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
-    display: flex;
-    padding: 0;
-    justify-content: space-between;
-    justify-content: center;
-    align-items: center;
-}
-
 
 .single_slide {
     display: flex;
@@ -41,7 +26,7 @@
     margin-bottom: 1em;
     border: 0.25px solid rgba(141, 141, 141, 0.085);
     border-radius: 0.75em;
-    transition: all ease-in-out 0.3s;
+    transition: all ease-in-out .3s;
 
     &:hover {
         background: rgba(141, 141, 141, 0.02);
@@ -79,52 +64,10 @@
     }
 }
 
-.empty_slide {
-    width: 100%;
-    background: #f5f5f520;
-    height: 40%;
-    padding: 1em;
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    margin-bottom: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all ease-in-out 0.3s;
-}
-
 .header {
     width: 100%;
     height: 7.5vh;
     border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
-    display: flex;
-    justify-content: space-between;
-}
-
-.empty_text{
-    font-size: 1.15em;
-}
-
-.mini_title{
-    font-size: 1.12em;
-    font-family: "Integral CF Demi Bold";
-
-}
-
-.navicon_wrapper {
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-    user-select: none;
-}
-
-.navicon_wrapper:hover {
-    background: #e0d9f7;
 }
 
 .right_wrapper {
@@ -161,13 +104,10 @@
     height: 100%;
     word-wrap: break-word;
 
-    font-size: 2.75em;
+    font-size: 2.3456789em;
     text-align: center;
     overflow: hidden;
-    // font-family: "Integral CF Demi Bold";
-    font-family: "Space Grotesk", sans-serif;
-    font-weight: 500;
-
+    font-family: "Integral CF Demi Bold";
     border: 0;
 }
 
@@ -193,14 +133,7 @@
 }
 
 .option_input {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1.7em;
-    word-wrap: break-word;
-    font-family: "Space Grotesk", sans-serif;
-    font-weight: 500;
+    font-size: 1.34567em;
+    font-family: "Integral CF Demi Bold";
     border: 0;
 }
