--- a/src/components/pages/Dashboard/AddQuiz/modals/Modal.module.scss
+++ b/src/components/pages/Dashboard/AddQuiz/modals/Modal.module.scss
@@ -1,13 +1,83 @@
-.container{
+._container {
     width: 100%;
     height: 100vh;
     position: absolute;
-    top: 0; right: 0;
-    background: var(--white)
+    top: 0;
+    right: 0;
+    background: var(--white);
+    z-index: 1222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #18181895;
 }
 
-.modal{
-    width: 60%;
-    height: 85vh;
-    background: red;
+._modal {
+    width: 33%;
+    height: 67.5vh;
+    background: #fff;
+    box-shadow: #33333315 -0.25em 0.25em 1em;
+    border-radius: 1em;
+    position: relative;
+    padding: 1em 1em;
+    border: 0.25px solid rgba(141, 141, 141, 0.085);
+
+    overflow: scroll;
+}
+
+._close_icon {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    padding: 0.2345em;
+    fill: black;
+    stroke: black;
+    width: 2em;
+    height: 2em;
+    border-radius: 120px;
+
+    &:hover {
+        background: #33333310;
+    }
+}
+
+._modal_title {
+    font-size: 1.5em;
+    padding-bottom: 0.5em;
+    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
+}
+
+._form_wrapper{
+    margin: 1em 0em;
+}
+
+._form_label_name {
+    margin-top: 1em;
+    margin-left: .5em;
+    font-size: .8em;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+._form_input {
+    width: 100%;
+    margin-top: .3em;
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 1.15em;
+    padding: 0.65em 0.75em;
+    border-radius: 1em;
+    border: 0.5px solid white;
+    margin-right: 0.25em;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+
+    border: 0.25px solid rgba(141, 141, 141, 0.085);
+
+    &:active {
+        border: 0.5px solid rgba(125, 99, 196, 0.314);
+    }
+
+    &:hover {
+        background: #f1f1f130;
+    }
 }
